tests/parsing/smtlib/poly/errors/014_sorted_var_list_unclosed_2.psmt2
(set-logic ALL)
(assert (forall ((x int) as) x))
